--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <maven.compiler.source>11</maven.compiler.source>
         <junit.version>5.9.2</junit.version>
         <spring-version>6.1.12</spring-version>
+        <log-version>1.5.7</log-version>
+        <slf4j-version>2.0.16</slf4j-version>
     </properties>
 
     <dependencies>
@@ -82,6 +84,17 @@
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>3.1.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${log-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-version}</version>
         </dependency>
     </dependencies>
 
